feat(sprint3): bloqueia farm de XP em licoes repetidas e adiciona feedback dinâmico de revisao